[tool.poetry]
name = "python-tutorial"
version = "0.1.0"
description = ""
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
plotly = "^5.18.0"
jupyterlab = "^4.0.9"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
